fixed uneven padding

--- a/src/scss/service-partial.scss
+++ b/src/scss/service-partial.scss
@@ -363,6 +363,7 @@ html, body {
     color: #fff;
     // height: auto;
     width: 100%;
+    padding: 4%;
 
     ul li p{
         color: #fff;
@@ -424,6 +425,7 @@ html, body {
 
 #marketing-strategy {
     background-color: $background-color-light;
+    padding: 4%;
     padding-top: 12%;
 }
 
